--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JenkinsWar</name>
+	<name>JenkinsWar1</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -39,4 +39,4 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
-</projectDescription>
+<projectDescription>
