--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>JenkinsWar</finalName>
+    <finalName></finalName>
   </build>
-</project>
+<project>
