--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName></finalName>
+    <finalName>JenkinsWar</finalName>
   </build>
-<project>
+</project>
